<resources>
    <string name="app_name">NutriCoach</string>
    <string name="action_settings">Settings</string>
    <string name="noresults">No results found</string>
    <string name="loading">Loading</string>
    <string name="error">An error ocurred</string>
    <string name="retry">Retry</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="recipe_image">Recipe image</string>
    <string name="add_remove_favorite">Remove from favorites</string>
    <string name="search_header">Type your ingredients</string>
    <string name="search_hint">milk,eggs,bread</string>
    <string name="nofavorites">No favorites</string>
    <string name="search_query_required">Query required</string>
    <string name="next">Siguiente</string>
    <string name="skip">Saltar</string>
    <string name="start">Empezar</string>
    <string name="register">Registrar</string>
    <string name="login_email_hint">Correo</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="signup_login_hint">Ya tienes cuenta? Inicia sesion</string>
    <string name="login_signup_hint">No tienes cuenta? Registrate</string>
    <string name="error_title">Error</string>
    <string name="error_message">Ha ocurrido un error. Porfavor vuelve a intentarlo</string>
    <string name="accept_button_text">Ok</string>
    <string name="please_wait_txt">Espere por favor</string>
    <string name="loading_txt">Cargando</string>
</resources>
